<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_menu_recent"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favourites" />
    </group>

    <item android:title="@string/menu_tools">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_support"
                android:title="@string/menu_support" />
        </menu>
    </item>

</menu>
