<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="site.makingtalk.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="site.makingtalk.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_recent"
        android:name="site.makingtalk.ui.recent.RecentFragment"
        android:label="@string/menu_recent"
        tools:layout="@layout/fragment_recent" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="site.makingtalk.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="site.makingtalk.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_support"
        android:name="site.makingtalk.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_send" />
</navigation>