<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoNetworkConnectionActivity">


    <ImageView
        android:id="@+id/noNetworkConnectionBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background2"
        android:contentDescription="@string/backgound2_desc" />

    <ImageView
        android:id="@+id/upgradeActivity"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/upgrade_no_network_connection_icon"
        android:contentDescription="@string/upgrade_no_network_connection_icon_desc" />

    <TextView
        android:id="@+id/TW_noInternetConnectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/no_network_connection_message"
        android:textSize="25sp" />
</RelativeLayout>