<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"
        android:text="@string/TV_dialog_profile_pwd_text" />

    <EditText
        android:id="@+id/ET_dialog_profile_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/ET_dialog_profile_pwd1_hint" />

    <TextView
        android:id="@+id/TV_dialog_profile_error_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/open_sans_light"
        android:textSize="13sp"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/ET_dialog_profile_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/ET_dialog_profile_pwd2_hint" />

    <TextView
        android:id="@+id/TV_dialog_profile_error_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/open_sans_light"
        android:textSize="13sp"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/ET_dialog_profile_pwd3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:hint="@string/ET_dialog_profile_pwd3_hint" />

    <TextView
        android:id="@+id/TV_dialog_profile_error_pwd3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/open_sans_light"
        android:textSize="13sp"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BTN_dialog_profile_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/style_reg_btn_action"
            android:fontFamily="@font/open_sans_light"
            android:textSize="20sp"
            android:text="@string/dialog_profile_positive_btn"/>

        <Button
            android:id="@+id/BTN_dialog_profile_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/style_reg_btn_action"
            android:fontFamily="@font/open_sans_light"
            android:textSize="20sp"
            android:text="@string/dialog_profile_negative_btn"/>

    </LinearLayout>
</LinearLayout>
